--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import findspark\n",
-    "# findspark.init()\n",
+    "import findspark\n",
+    "findspark.init()\n",
     "import time\n",
     "from pyspark import SparkConf,SparkContext\n",
     "from pyspark.streaming import StreamingContext\n",
@@ -18,42 +18,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Cannot run multiple SparkContexts at once; existing SparkContext(app=BigData, master=local[*]) created by __init__ at /tmp/ipykernel_4109/3701993445.py:3 ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_4109/94673179.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mconf\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mSparkConf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mconf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msetAppName\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"BigData\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0msc\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mSparkContext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconf\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mconf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mssc\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mStreamingContext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msc\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/spark/python/pyspark/context.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, master, appName, sparkHome, pyFiles, environment, batchSize, serializer, conf, gateway, jsc, profiler_cls)\u001b[0m\n\u001b[1;32m    142\u001b[0m                 \" is not allowed as it is a security risk.\")\n\u001b[1;32m    143\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 144\u001b[0;31m         \u001b[0mSparkContext\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_ensure_initialized\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgateway\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mgateway\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconf\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mconf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    145\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    146\u001b[0m             self._do_init(master, appName, sparkHome, pyFiles, environment, batchSize, serializer,\n",
+      "\u001b[0;32m/opt/spark/python/pyspark/context.py\u001b[0m in \u001b[0;36m_ensure_initialized\u001b[0;34m(cls, instance, gateway, conf)\u001b[0m\n\u001b[1;32m    340\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    341\u001b[0m                     \u001b[0;31m# Raise error if there is already a running Spark context\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 342\u001b[0;31m                     raise ValueError(\n\u001b[0m\u001b[1;32m    343\u001b[0m                         \u001b[0;34m\"Cannot run multiple SparkContexts at once; \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    344\u001b[0m                         \u001b[0;34m\"existing SparkContext(app=%s, master=%s)\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: Cannot run multiple SparkContexts at once; existing SparkContext(app=BigData, master=local[*]) created by __init__ at /tmp/ipykernel_4109/3701993445.py:3 "
+     ]
+    }
+   ],
+   "source": [
+    "conf=SparkConf()\n",
+    "conf.setAppName(\"BigData\")\n",
+    "sc=SparkContext.getOrCreate(conf=conf)\n",
+    "\n",
+    "ssc=StreamingContext(sc,2)\n",
+    "ssc.checkpoint(\"checkpoint_BIGDATA\")\n",
+    "\n",
+    "dataStream=ssc.socketTextStream(\"localhost\",6100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sc=SparkContext('local',\"task1\")\n",
-    "sqlContext = SQLContext(sc)\n",
-    "\n",
-    "df = sqlContext.read.json(\"/home/pes1ug19cs599/inp2.json\")\n",
-    "df.show(5)\n",
-    "\n",
-    "#select => \"select\" in sql\n",
-    "df.select(\"author\", \"title\", \"rank\", \"price\").show(5)\n",
-    "\n",
-    "#isin => \"in\" in sql\n",
-    "df[df.author.isin(\"John Sandford\", \"Stephenie Meyer\")].show(5)\n",
-    "\n",
-    "df.select(\"author\", \"title\", df.title.like(\"%THE%\")).show(5) #startswith, endswith\n",
-    "\n",
-    "df_del = df.drop(\"amazon_product_url\", \"published_date\")\n",
-    "df_del.show(5)\n",
-    "#df_add = df.withColumn('fresh_column') #add new columns\n",
-    "#df_update = df.withColumnRenamed(\"published_date\", \"date\") #update/rename column names\n",
-    "\n",
-    "#groupBy + orderby\n",
-    "df_grp = df.groupBy(\"author\").count().orderBy(\"count\", ascending=0).show(10)\n",
-    "#filter\n",
-    "df.filter(df[\"title\"] == \"THE HOST\").show(5)\n",
-    "\n",
-    "#  df -> rdd\n",
-    "rdd1 = df.rdd\n",
-    "rdd1.take(5)\n",
-    "\n",
-    "#  rdd -> df\n",
-    "df2 = rdd1.toDF()\n",
-    "df2.show(5)"
+    "dataStream.pprint()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
